# contracts

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  t  test.sh
.github/workflows/: tests.yml
dao/: README.md  dao_deploy.sh  dao_deploy_mainnet.sh  dao_deploy_testnet.sh  dao_proposals.sh  dao_proposals_mainnet.sh  dao_proposals_testnet.sh
e2e/: Cargo.toml
e2e/.near-credentials/sandbox/: dev-20211210195159-73279480354003.json  dev-20211210195241-76316602181166.json  dev-20211211234244-78079080671237.json  dev-20211212002735-10129406903683.json  dev-20211212002901-48181849943953.json  dev-20211212003636-79215936611930.json  dev-20211212003729-49836347485261.json  dev-20211212003845-60258341949294.json  dev-20211212004016-81993402464400.json  dev-20211212193723-80845682714851.json  dev-20211212193728-83534400446425.json  dev-20211212193731-77629893155850.json  dev-20211212195406-59077850281443.json  dev-20211212195413-94144628981339.json  dev-20211212195415-57698489217726.json  dev-20211213211712-90837459157941.json  dev-20211213211721-36862905406026.json  dev-20211213211724-76531673026450.json  dev-20211213212552-37388908865538.json  dev-20211213212600-67656551044361.json  dev-20211213212602-84723773406015.json  dev-20211213212604-43942061987712.json  dev-20211213215404-82909228213251.json  dev-20211213215417-46304463336538.json  dev-20211213215419-57533759021471.json  dev-20211213215421-65426860435805.json  dev-20211213215520-61091010055559.json  dev-20211213215529-89506599529254.json  dev-20211213215532-62530135862620.json  dev-20211213215535-23480699205067.json  dev-20211213215734-60670736581900.json  dev-20211213215745-63497242816024.json  dev-20211213215747-11200380089985.json  dev-20211213215750-49380988884294.json  dev-20211213221542-66317911550921.json  dev-20211213222155-82448659472595.json  dev-20211213222159-82650714906709.json  dev-20211213222202-36426558326818.json  dev-20211213222204-58279646274457.json  dev-20211213223350-51601744557225.json  (+29 more)
e2e/src/: agents_basic.rs  bootstrap.rs  lib.rs  tasks.rs  utils.rs
examples/airdrop/: Cargo.toml
examples/airdrop/src/: lib.rs
examples/charity/: Cargo.toml
examples/charity/src/: lib.rs
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs
examples/cross-contract/: Cargo.toml
examples/cross-contract/src/: lib.rs
examples/views/: Cargo.toml
examples/views/src/: lib.rs
manager/: Cargo.toml
manager/src/: agent.rs  lib.rs  owner.rs  storage_impl.rs  tasks.rs  triggers.rs  util.rs  utils.rs  views.rs
manager/tests-old/sim/: test_utils.rs
manager/tests-old/sputnik/: sputnikdao2.wasm
manager/tests/sim/: main.rs  test_utils.rs
res/: charity.wasm  cross_contract.wasm  manager.wasm  rewards.wasm  rust_charity_tutorial.wasm  rust_counter_tutorial.wasm  views.wasm
rewards/: Cargo.toml
rewards/src/: lib.rs
scripts/: airdrop_bootstrap.sh  clear_all.sh  create_and_deploy.sh  dao_deploy.sh  guildnet_deploy.sh  mainnet_deploy.sh  owner_commands.sh  rewards_bootstrap.sh  simple_bootstrap.sh  testnet_deploy.sh  triggers_bootstrap.sh
