[workspace]
# include a member for each contract
members = [
  "manager",
  "rewards",
  "examples/airdrop",
  "examples/counter",
  "examples/charity",
  "examples/cross-contract",
  "examples/views"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = true
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
