[package]
name = "e2e"
version = "0.1.0"
publish = false
edition = "2018"

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
workspaces = { git = "https://github.com/near/workspaces-rs", rev="afc013196f21075dfa7484ca12d8c7f7bbee4873" }

near-sdk = "4.0.0-pre.3"
near-contract-standards = "4.0.0-pre.3"