[package]
name = "cron-manager"
version = "0.0.1"
authors = ["Cron.near", "@trevorjtclarke"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", tag="3.0.0" }
#near-sdk = "3.0.0-pre-release"
#near-sdk = "3.0.0-pre.2"
#near-sdk-sim = "3.0.0-pre-release"
borsh = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
