[package]
name = "rewards"
version = "0.1.1"
authors = ["cron.cat", "@trevorjtclarke", "@mikedotexe"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.2.0"

[dev-dependencies]
near-sdk-sim = "3.1.0"
near-primitives-core = "0.4.0"